# MPoint

./: CMakeLists.txt  CMakePresets.json  main.cpp
inc/: point.h
src/: point.cpp
